--- a/.github/actions/build-effective-set-python/action.yml
+++ b/.github/actions/build-effective-set-python/action.yml
@@ -29,16 +29,16 @@ inputs:
 outputs:
   custom-tag:
     description: 'Custom tag with timestamp'
-    value: ${{ steps.generate-tags.outputs.custom-tag }}
+    value: ${{ steps.generate-tags.outputs.custom_tag }}
   branch-tag:
     description: 'Branch-based tag'
-    value: ${{ steps.generate-tags.outputs.branch-tag }}
+    value: ${{ steps.generate-tags.outputs.branch_tag }}
   timestamp:
     description: 'Generated timestamp'
     value: ${{ steps.generate-tags.outputs.timestamp }}
   branch-latest-tag:
     description: 'Branch latest tag'
-    value: ${{ steps.generate-tags.outputs.branch-latest-tag }}
+    value: ${{ steps.generate-tags.outputs.branch_latest_tag }}
 
 runs:
   using: composite
@@ -56,6 +56,15 @@ runs:
     - name: Generate Docker tags
       id: generate-tags
       uses: ./.github/actions/generate-docker-tags
+
+    - name: Debug outputs
+      shell: bash
+      run: |
+        echo "DEBUG: Checking outputs from generate-docker-tags action:"
+        echo "custom_tag: ${{ steps.generate-tags.outputs.custom_tag }}"
+        echo "branch_tag: ${{ steps.generate-tags.outputs.branch_tag }}"
+        echo "timestamp: ${{ steps.generate-tags.outputs.timestamp }}"
+        echo "branch_latest_tag: ${{ steps.generate-tags.outputs.branch_latest_tag }}"
 
     - name: Extract metadata (tags, labels) for Docker
       id: meta
