--- a/.github/workflows/dev-build-docker-images.yml
+++ b/.github/workflows/dev-build-docker-images.yml
@@ -215,23 +215,19 @@ jobs:
           
           # Check which images were built and update accordingly
           if [[ "${{ needs.build-qubership-gcip.result }}" == "success" ]]; then
-            echo "Updating qubership-gcip tag to ${{ needs.build-qubership-gcip.outputs.branch-latest-tag || 'latest' }}"
-            sed -i "s|qubership-gcip:[^']*|qubership-gcip:${{ needs.build-qubership-gcip.outputs.branch-latest-tag || 'latest' }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            sed -i "s|qubership-gcip:[^']*|qubership-gcip:${{ needs.build-qubership-gcip.outputs.branch-latest-tag }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           if [[ "${{ needs.build-qubership-envgene.result }}" == "success" ]]; then
-            echo "Updating qubership-envgene tag to ${{ needs.build-qubership-envgene.outputs.branch-latest-tag || 'latest' }}"
-            sed -i "s|qubership-envgene:[^']*|qubership-envgene:${{ needs.build-qubership-envgene.outputs.branch-latest-tag || 'latest' }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            sed -i "s|qubership-envgene:[^']*|qubership-envgene:${{ needs.build-qubership-envgene.outputs.branch-latest-tag }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           if [[ "${{ needs.build-effective-set-generator.result }}" == "success" ]]; then
-            echo "Updating qubership-effective-set-generator tag to ${{ needs.build-effective-set-generator.outputs.branch-latest-tag || 'latest' }}"
-            sed -i "s|qubership-effective-set-generator:[^']*|qubership-effective-set-generator:${{ needs.build-effective-set-generator.outputs.branch-latest-tag || 'latest' }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            sed -i "s|qubership-effective-set-generator:[^']*|qubership-effective-set-generator:${{ needs.build-effective-set-generator.outputs.branch-latest-tag }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           if [[ "${{ needs.build-effective-set-generator-python.result }}" == "success" ]]; then
-            echo "Updating qubership-effective-set-generator-python tag to ${{ needs.build-effective-set-generator-python.outputs.branch-latest-tag || 'latest' }}"
-            sed -i "s|qubership-effective-set-generator-python:[^']*|qubership-effective-set-generator-python:${{ needs.build-effective-set-generator-python.outputs.branch-latest-tag || 'latest' }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            sed -i "s|qubership-effective-set-generator-python:[^']*|qubership-effective-set-generator-python:${{ needs.build-effective-set-generator-python.outputs.branch-latest-tag }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           # Check if any images were updated
