--- a/.github/workflows/dev-build-docker-images.yml
+++ b/.github/workflows/dev-build-docker-images.yml
@@ -76,10 +76,10 @@ jobs:
       attestations: write
       id-token: write
     outputs:
-      custom-tag: ${{ steps.build-gcip.outputs.custom-tag }}
-      branch-tag: ${{ steps.build-gcip.outputs.branch-tag }}
+      custom_tag: ${{ steps.build-gcip.outputs.custom_tag }}
+      branch_tag: ${{ steps.build-gcip.outputs.branch_tag }}
       timestamp: ${{ steps.build-gcip.outputs.timestamp }}
-      branch-latest-tag: ${{ steps.build-gcip.outputs.branch-latest-tag }}
+      branch_latest_tag: ${{ steps.build-gcip.outputs.branch_latest_tag }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -103,10 +103,10 @@ jobs:
       attestations: write
       id-token: write
     outputs:
-      custom-tag: ${{ steps.build-envgene.outputs.custom-tag }}
-      branch-tag: ${{ steps.build-envgene.outputs.branch-tag }}
+      custom_tag: ${{ steps.build-envgene.outputs.custom_tag }}
+      branch_tag: ${{ steps.build-envgene.outputs.branch_tag }}
       timestamp: ${{ steps.build-envgene.outputs.timestamp }}
-      branch-latest-tag: ${{ steps.build-envgene.outputs.branch-latest-tag }}
+      branch_latest_tag: ${{ steps.build-envgene.outputs.branch_latest_tag }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -142,10 +142,10 @@ jobs:
       attestations: write
       id-token: write
     outputs:
-      custom-tag: ${{ steps.build-effective-set-generator.outputs.custom-tag }}
-      branch-tag: ${{ steps.build-effective-set-generator.outputs.branch-tag }}
+      custom_tag: ${{ steps.build-effective-set-generator.outputs.custom_tag }}
+      branch_tag: ${{ steps.build-effective-set-generator.outputs.branch_tag }}
       timestamp: ${{ steps.build-effective-set-generator.outputs.timestamp }}
-      branch-latest-tag: ${{ steps.build-effective-set-generator.outputs.branch-latest-tag }}
+      branch_latest_tag: ${{ steps.build-effective-set-generator.outputs.branch_latest_tag }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -169,10 +169,10 @@ jobs:
       attestations: write
       id-token: write
     outputs:
-      custom-tag: ${{ steps.build-effective-set-python.outputs.custom-tag }}
-      branch-tag: ${{ steps.build-effective-set-python.outputs.branch-tag }}
+      custom_tag: ${{ steps.build-effective-set-python.outputs.custom_tag }}
+      branch_tag: ${{ steps.build-effective-set-python.outputs.branch_tag }}
       timestamp: ${{ steps.build-effective-set-python.outputs.timestamp }}
-      branch-latest-tag: ${{ steps.build-effective-set-python.outputs.branch-latest-tag }}
+      branch_latest_tag: ${{ steps.build-effective-set-python.outputs.branch_latest_tag }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -215,19 +215,19 @@ jobs:
           
           # Check which images were built and update accordingly
           if [[ "${{ needs.build-qubership-gcip.result }}" == "success" ]]; then
-            sed -i "s|qubership-gcip:[^']*|qubership-gcip:${{ needs.build-qubership-gcip.outputs.branch-latest-tag }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            sed -i "s|qubership-gcip:[^']*|qubership-gcip:${{ needs.build-qubership-gcip.outputs.custom_tag }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           if [[ "${{ needs.build-qubership-envgene.result }}" == "success" ]]; then
-            sed -i "s|qubership-envgene:[^']*|qubership-envgene:${{ needs.build-qubership-envgene.outputs.branch-latest-tag }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            sed -i "s|qubership-envgene:[^']*|qubership-envgene:${{ needs.build-qubership-envgene.outputs.custom_tag }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           if [[ "${{ needs.build-effective-set-generator.result }}" == "success" ]]; then
-            sed -i "s|qubership-effective-set-generator:[^']*|qubership-effective-set-generator:${{ needs.build-effective-set-generator.outputs.branch-latest-tag }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            sed -i "s|qubership-effective-set-generator:[^']*|qubership-effective-set-generator:${{ needs.build-effective-set-generator.outputs.custom_tag }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           if [[ "${{ needs.build-effective-set-generator-python.result }}" == "success" ]]; then
-            sed -i "s|qubership-effective-set-generator-python:[^']*|qubership-effective-set-generator-python:${{ needs.build-effective-set-generator-python.outputs.branch-latest-tag }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            sed -i "s|qubership-effective-set-generator-python:[^']*|qubership-effective-set-generator-python:${{ needs.build-effective-set-generator-python.outputs.custom_tag }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           # Check if any images were updated
