--- a/.github/workflows/dev-build-docker-images.yml
+++ b/.github/workflows/dev-build-docker-images.yml
@@ -52,6 +52,16 @@ jobs:
       - name: Validate Conventional Commits
         uses: ./.github/actions/conventional-commits
 
+  link-check:
+    needs: [conventional-commits]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Link Checker
+        uses: ./.github/actions/link-checker
+
   linters:
     needs: [conventional-commits]
     runs-on: ubuntu-latest
@@ -78,7 +88,7 @@ jobs:
         uses: ./.github/actions/run-tests
 
   build-qubership-pipegene:
-    needs: [linters, tests]
+    needs: [linters, tests, link-check]
     if: (github.event_name == 'workflow_dispatch' && github.event.inputs.build-pipegene == 'true' && github.event.inputs.tests-only == 'false') || (github.event_name == 'push' && (contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')))
     runs-on: ubuntu-latest
     permissions:
@@ -103,7 +113,7 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
 
   build-qubership-envgene:
-    needs: [linters, tests]
+    needs: [linters, tests, link-check]
     if: (github.event_name == 'workflow_dispatch' && github.event.inputs.build-envgene == 'true' && github.event.inputs.tests-only == 'false') || (github.event_name == 'push' && (contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')))
     runs-on: ubuntu-latest
     permissions:
@@ -128,7 +138,7 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
 
   build-effective-set-jar:
-    needs: [linters, tests]
+    needs: [linters, tests, link-check]
     if: (github.event_name == 'workflow_dispatch' && github.event.inputs.build-effective-set == 'true' && github.event.inputs.tests-only == 'false') || (github.event_name == 'push' && (contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')))
     uses: netcracker/qubership-workflow-hub/.github/workflows/maven-publish.yml@main
     with:
@@ -169,6 +179,7 @@ jobs:
     needs:
       - linters
       - tests
+      - link-check
       - build-qubership-pipegene
       - build-qubership-envgene
       - build-effective-set-generator
